--- a/landingpage/public/manifest.json
+++ b/landingpage/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Aria Website",
-  "name": "Create React App Sample",
+  "name": "Demo Website",
   "icons": [
     {
       "src": "./logo.png",
