--- a/landingpage/package.json
+++ b/landingpage/package.json
@@ -13,7 +13,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router": "^6.28.0",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "sass": "^1.80.6",
     "web-vitals": "^2.1.4"
   },
