--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
       interval: "monthly"
     open-pull-requests-limit: 5
     commit-message:
-      prefix: "fix"
+      prefix: "🛠fix"
     labels:
       - dependencies
       - security
