--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,11 +4,17 @@ updates:
     directory: "/landingpage"
     schedule:
       interval: "monthly"
-    open-pull-requests-limit: 5
     commit-message:
-      prefix: "🛠fix"
+      prefix: "fix"
     labels:
       - dependencies
       - security
     allow:
       - dependency-type: "all"
+    groups:
+      all-npm-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
+          - "minor"
